--- a/app/src/main/res/layout/header_view_operation.xml
+++ b/app/src/main/res/layout/header_view_operation.xml
@@ -9,6 +9,7 @@
 
 
     <LinearLayout
+        android:id="@+id/llZhengWen"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
