--- a/app/src/main/res/layout/header_view_operation.xml
+++ b/app/src/main/res/layout/header_view_operation.xml
@@ -58,6 +58,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llAttachment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
