--- a/app/src/main/res/layout/header_view_operation.xml
+++ b/app/src/main/res/layout/header_view_operation.xml
@@ -33,6 +33,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llLiuCheng"
         android:layout_marginEnd="1px"
         android:layout_marginStart="1px"
         android:layout_width="0dp"
