--- a/app/src/main/res/layout/act_qjsq_add.xml
+++ b/app/src/main/res/layout/act_qjsq_add.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,6 +7,11 @@
     <com.unicorn.sxmobileoa.app.ui.TitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
-        android:layout_height="56dp"/>
+        android:layout_height="56dp" />
+
+    <include layout="@layout/header_view_qjsq" />
+
+    <include layout="@layout/footer_view_button"/>
+
 
 </LinearLayout>
