--- a/app/src/main/res/layout/header_view_qjsq.xml
+++ b/app/src/main/res/layout/header_view_qjsq.xml
@@ -41,8 +41,10 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/tvBt"
+            android:background="@null"
+            android:enabled="false"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
