--- a/app/src/main/res/layout/header_view_wbfw.xml
+++ b/app/src/main/res/layout/header_view_wbfw.xml
@@ -8,6 +8,7 @@
     tools:ignore="HardcodedText,RtlSymmetry,SpUsage,LabelFor,ContentDescription">
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:background="@color/md_grey_100" />
