--- a/app/src/main/res/layout/item_spyj.xml
+++ b/app/src/main/res/layout/item_spyj.xml
@@ -38,7 +38,7 @@
 
     </LinearLayout>
 
-    <TextView
+    <EditText
         android:id="@+id/etSpyj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,6 +46,7 @@
         android:layout_marginTop="1px"
         android:background="@color/md_white"
         android:gravity="start|top"
+        android:inputType="text"
         android:paddingBottom="16dp"
         android:textColor="@color/md_black" />
 
