--- a/app/src/main/res/layout/footer_view_button.xml
+++ b/app/src/main/res/layout/footer_view_button.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_weight="1"
+        android:visibility="gone"
         android:text="保存" />
 
     <com.unicorn.sxmobileoa.app.ui.CustomButton
@@ -24,7 +25,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="8dp"
         android:layout_weight="1"
         android:text="下一步" />
 
