--- a/app/src/main/res/layout/item_spyj.xml
+++ b/app/src/main/res/layout/item_spyj.xml
@@ -36,6 +36,17 @@
             android:textColor="@color/md_grey_500"
             android:textSize="14dp" />
 
+        <TextView
+            android:paddingStart="2dp"
+            android:paddingEnd="2dp"
+            android:text="电脑签"
+            android:id="@+id/tvSign"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14dp" />
+
     </LinearLayout>
 
     <EditText
