--- a/app/src/main/res/layout/act_title_tab_viewpager.xml
+++ b/app/src/main/res/layout/act_title_tab_viewpager.xml
@@ -13,6 +13,7 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
+        android:background="@color/md_white"
         android:layout_width="match_parent"
         android:layout_height="56dp" />
 
