--- a/app/src/main/res/layout/act_title_tab_viewpager.xml
+++ b/app/src/main/res/layout/act_title_tab_viewpager.xml
@@ -18,6 +18,7 @@
         android:layout_height="56dp" />
 
     <android.support.v4.view.ViewPager
+        android:background="@color/md_white"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
