增加 type 参数 1 待办 2 已办

--- a/app/src/main/res/layout/header_view_wply.xml
+++ b/app/src/main/res/layout/header_view_wply.xml
@@ -175,7 +175,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="点击查看物品领用详情"
+            android:text="查看物品领用详情"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
