--- a/app/src/main/res/layout/item_wply.xml
+++ b/app/src/main/res/layout/item_wply.xml
@@ -45,14 +45,12 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/tvGg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:enabled="false"
-            android:inputType="text"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
@@ -73,14 +71,11 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/tvSqsl"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@null"
-            android:enabled="false"
-            android:inputType="text"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
