--- a/app/src/main/res/layout/header_view_ycsq.xml
+++ b/app/src/main/res/layout/header_view_ycsq.xml
@@ -41,13 +41,16 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <TextView
+        <EditText
+            android:background="@null"
+            android:enabled="false"
             android:id="@+id/tvBt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/md_grey_400"
-            android:textSize="14dp" />
+            android:textSize="14dp"
+            android:inputType="text" />
 
     </LinearLayout>
 
