--- a/app/src/main/res/layout/header_view_sbbf.xml
+++ b/app/src/main/res/layout/header_view_sbbf.xml
@@ -172,7 +172,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="点击查看设备报废详情"
+            android:text="查看设备报废详情"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
