公告信息更改

--- a/app/src/main/res/layout/header_view_ggxx.xml
+++ b/app/src/main/res/layout/header_view_ggxx.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    >
+    android:padding="16dp">
 
     <WebView
         android:id="@+id/webView"
@@ -15,41 +14,23 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
-        android:id="@+id/tvFsr"
+        android:id="@+id/tvSendUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="发送人"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/webView" />
 
     <TextView
-        android:id="@+id/tvSysTime"
+        android:id="@+id/tvCreateDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="系统时间"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvFsr" />
-
-
-    <TextView
-        android:id="@+id/labelJsr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="已查看人员:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSysTime" />
-
-    <TextView
-        android:id="@+id/tvJsr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="已查看人员:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelJsr" />
+        app:layout_constraintTop_toBottomOf="@+id/tvSendUserName" />
 
 </android.support.constraint.ConstraintLayout>
